[B]Version 1.1.79[/B]
Chaturbate - fix tags
Jav.Guru - added series, tags and Lookup Info, also picks up links like Rapidgator
xhamster - fix pagination