@@ -1,2 +1,0 @@
-Site URL: http://vidoz8.com/
-DMCA: http://vidoz8.com/info/#dmca
