@@ -2,3 +2,4 @@
 Chaturbate - fix tags
 Jav.Guru - added series, tags and Lookup Info, also picks up links like Rapidgator
 xhamster - fix pagination
+Vidoz8 - removed broken site
